Add metrics to track commit and BCC references counts
The patch add the following metrics:
* Number of commit-to-BCC reference map entries retained per indexing shard commit state
* Number of live batched compound commit blob references per indexing shard commit state
* Histogram of distinct batched compound commit blobs referenced per Lucene commit

The goal of those metrics is to allow us to monitor compound commit references an BCC references
growth.

Relates to elastic/incident-management#981