@@ -104,6 +104,9 @@ import static org.elasticsearch.xpack.stateless.commits.HollowShardsService.STAT
 import static org.elasticsearch.xpack.stateless.commits.StatelessCommitService.BCC_ELAPSED_TIME_BEFORE_FREEZE_HISTOGRAM_METRIC;
 import static org.elasticsearch.xpack.stateless.commits.StatelessCommitService.BCC_NUMBER_COMMITS_HISTOGRAM_METRIC;
 import static org.elasticsearch.xpack.stateless.commits.StatelessCommitService.BCC_TOTAL_SIZE_HISTOGRAM_METRIC;
+import static org.elasticsearch.xpack.stateless.commits.StatelessCommitService.REFERENCED_BCCS_PER_COMMIT_HISTOGRAM_METRIC;
+import static org.elasticsearch.xpack.stateless.commits.StatelessCommitService.SHARD_BCC_BLOB_REFERENCES_GAUGE_METRIC;
+import static org.elasticsearch.xpack.stateless.commits.StatelessCommitService.SHARD_COMMIT_REFERENCES_INFOS_GAUGE_METRIC;
 import static org.elasticsearch.xpack.stateless.commits.StatelessCommitService.STATELESS_UPLOAD_MAX_AMOUNT_COMMITS;
 import static org.elasticsearch.xpack.stateless.commits.StatelessCommitService.STATELESS_UPLOAD_MAX_SIZE;
 import static org.elasticsearch.xpack.stateless.commits.StatelessCommitService.STATELESS_UPLOAD_VBCC_MAX_AGE;
@@ -247,6 +250,14 @@ public class VirtualBatchedCompoundCommitsIT extends AbstractStatelessPluginInte
                     return false;
                 }
             };
+        }
+
+        public int commitReferencesInfosCount(ShardId shardId) {
+            return getShardCommitState(shardId).commitReferencesInfosCount();
+        }
+
+        public int bccBlobReferencesCountForTests(ShardId shardId) {
+            return getShardCommitState(shardId).bccBlobReferencesCount();
         }
     }
 
@@ -1297,13 +1308,13 @@ public class VirtualBatchedCompoundCommitsIT extends AbstractStatelessPluginInte
         createIndex(indexName, indexSettings(1, 0).put(IndexSettings.INDEX_REFRESH_INTERVAL_SETTING.getKey(), -1).build());
 
         var shardId = findIndexShard(indexName).shardId();
-        var statelessCommitService = internalCluster().getInstance(StatelessCommitService.class, indexNode);
+        var statelessCommitService = (TestStatelessCommitService) internalCluster().getInstance(StatelessCommitService.class, indexNode);
         var threadPool = internalCluster().getInstance(ThreadPool.class, indexNode);
         final var metricsPlugin = findPlugin(indexNode, TestTelemetryPlugin.class);
-        metricsPlugin.resetMeter();
 
         final int numberCommits = between(5, 8);
         for (int i = 0; i < numberCommits; i++) {
+            metricsPlugin.resetMeter();
             indexDocsAndRefresh(indexName);
             if (randomBoolean() || i == numberCommits - 1) {
                 final VirtualBatchedCompoundCommit virtualBcc = statelessCommitService.getCurrentVirtualBcc(shardId);
@@ -1313,23 +1324,56 @@ public class VirtualBatchedCompoundCommitsIT extends AbstractStatelessPluginInte
 
                 final List<Measurement> sizeMeasurements = metricsPlugin.getLongHistogramMeasurement(BCC_TOTAL_SIZE_HISTOGRAM_METRIC);
                 assertThat(sizeMeasurements, hasSize(1));
-                assertMeasurement(sizeMeasurements.get(0), ByteSizeUnit.BYTES.toMB(virtualBcc.getTotalSizeInBytes()));
+                assertMeasurement(sizeMeasurements.getFirst(), ByteSizeUnit.BYTES.toMB(virtualBcc.getTotalSizeInBytes()));
 
                 final List<Measurement> nCommitsMeasurements = metricsPlugin.getLongHistogramMeasurement(
                     BCC_NUMBER_COMMITS_HISTOGRAM_METRIC
                 );
                 assertThat(nCommitsMeasurements, hasSize(1));
-                assertMeasurement(nCommitsMeasurements.get(0), virtualBcc.size());
+                assertMeasurement(nCommitsMeasurements.getFirst(), virtualBcc.size());
 
                 final List<Measurement> ageMeasurements = metricsPlugin.getLongHistogramMeasurement(
                     BCC_ELAPSED_TIME_BEFORE_FREEZE_HISTOGRAM_METRIC
                 );
                 assertThat(ageMeasurements, hasSize(1));
-                assertThat(ageMeasurements.get(0).attributes(), equalTo(Map.of()));
+                assertThat(ageMeasurements.getFirst().attributes(), equalTo(Map.of()));
                 // The exact value of age is not important as long as it is greater or equal than the minimum age
                 // that is measured before creating the upload task
-                assertThat(ageMeasurements.get(0).getLong(), greaterThanOrEqualTo(minAge));
-                metricsPlugin.resetMeter();
+                assertThat(ageMeasurements.getFirst().getLong(), greaterThanOrEqualTo(minAge));
+
+                final int expectedCommitRefsCount = statelessCommitService.commitReferencesInfosCount(shardId);
+                final List<Measurement> referencedBccsMeasurements = metricsPlugin.getLongHistogramMeasurement(
+                    REFERENCED_BCCS_PER_COMMIT_HISTOGRAM_METRIC
+                );
+                assertThat(referencedBccsMeasurements, hasSize(1));
+                for (Measurement referencedBccsMeasurement : referencedBccsMeasurements) {
+                    assertThat(referencedBccsMeasurement.attributes(), equalTo(Map.of()));
+                }
+
+                metricsPlugin.collect();
+
+                final Map<String, Object> attributes = Map.of("index", shardId.getIndexName(), "shard", shardId.id());
+
+                final List<Measurement> commitRefsMeasurements = metricsPlugin.getLongGaugeMeasurement(
+                    SHARD_COMMIT_REFERENCES_INFOS_GAUGE_METRIC
+                );
+                assertThat(commitRefsMeasurements, hasSize(1));
+                assertThat(commitRefsMeasurements.getFirst().attributes(), equalTo(attributes));
+                assertThat(
+                    commitRefsMeasurements.getFirst().getLong(),
+                    equalTo((long) statelessCommitService.commitReferencesInfosCount(shardId))
+                );
+
+                final List<Measurement> bccReferencesMeasurements = metricsPlugin.getLongGaugeMeasurement(
+                    SHARD_BCC_BLOB_REFERENCES_GAUGE_METRIC
+                );
+
+                assertThat(commitRefsMeasurements, hasSize(1));
+                assertThat(commitRefsMeasurements.getFirst().attributes(), equalTo(attributes));
+                assertThat(
+                    bccReferencesMeasurements.getFirst().getLong(),
+                    equalTo((long) statelessCommitService.bccBlobReferencesCountForTests(shardId))
+                );
             }
         }
     }
